# FastAPI-Examples

./: .gitignore  main.py  pyproject.toml  requirements.txt
auth/: main.py
auth/app/: main.py
auth/app/api/: api.py  main.py
auth/app/api/endpoints/: users.py
auth/app/api/routes/: user.py
auth/app/core/: config.py  db.py
auth/app/db/models/: users.py
auth/app/models/: abstract.py  user.py
auth/app/schemas/: pagination.py  user.py  users.py
auth/models/: user.py
auth/tests/: test_user_routes.py
chatbot/: 01_chat_sencillo.py
hexagonal/auth/: README.md  main.py
hexagonal/auth/api/: main.py
hexagonal/auth/api/dependencies/: auth.py  infrastructure.py  repositories.py
hexagonal/auth/api/routers/: auth.py
hexagonal/auth/application/dtos/: __init__.py  pagination_dto.py  token_dto.py  user_dto.py
hexagonal/auth/application/use_cases/auth/: register_user.py
hexagonal/auth/domain/exceptions/: __init__.py  base.py  user.py
hexagonal/auth/domain/models/: user.py
hexagonal/auth/domain/ports/: security_service.py  token_service.py  user_repository.py
hexagonal/auth/infrastructure/adapters/persistence/: __init__.py  sql_user_repository.py  user.py
hexagonal/auth/infrastructure/adapters/security/: security_service.py
hexagonal/auth/infrastructure/config/: config.py  db.py
