[project]
name = "fastapi-examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "pydantic-settings>=2.8.1",
    "slowapi>=0.1.9",
    "sqlmodel>=0.0.24",
]

[tool.uv.workspace]
members = ["auth"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "ruff>=0.11.0",
]

[tool.pytest.ini_options]
markers = [
    "asyncio: mark test as an asyncio test",
]
asyncio_mode = "auto"

