[project]
name = "fastapi-examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "fastapi[standard]>=0.115.11",
    "langchain>=1.2.0",
    "openai>=1.92.2",
    "passlib[argon2]>=1.7.4",
    "psycopg[binary]>=3.3.2",
    "pydantic-settings>=2.8.1",
    "python-jose>=3.5.0",
    "ruff>=0.11.0",
    "slowapi>=0.1.9",
    "sqlmodel>=0.0.24",
    "tenacity>=9.1.2",
]

[tool.uv.workspace]
members = ["auth"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
]

[tool.pytest.ini_options]
markers = [
    "asyncio: mark test as an asyncio test",
]
asyncio_mode = "auto"
pythonpath = [".", "auth"]
